tests/ui/traits/const-traits/specialization/const-default-bound-non-const-specialized-bound.stderr
error[E0119]: conflicting implementations of trait `Bar`
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:24:1
   |
LL | / const impl<T> Bar for T
LL | | where
LL | |     T: [const] Foo,
   | |___________________- first implementation here
...
LL | / impl<T> Bar for T
LL | | where
LL | |     T: Foo,
LL | |     T: Specialize,
   | |__________________^ conflicting implementation

error[E0119]: conflicting implementations of trait `Baz`
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:43:1
   |
LL | / const impl<T> Baz for T
LL | | where
LL | |     T: [const] Foo,
   | |___________________- first implementation here
...
LL | / const impl<T> Baz for T
LL | | where
LL | |     T: Foo,
LL | |     T: Specialize,
   | |__________________^ conflicting implementation

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
